clusters/hetzner-k3s/istio/wildcard-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: wildcard-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress-private
  servers:
    - hosts:
        - links.${cluster_subdomain}
        - n8n.${cluster_subdomain}
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - links.${cluster_subdomain}
        - n8n.${cluster_subdomain}
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: localhost-direct
        mode: SIMPLE
